# rudraxone

./: .gitignore  DOCUMENTATION.md  INSTALLATION.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
ai_agent_widget/: api.py  export_service.py  hooks.py  modules.txt  notifications.py  patches.txt  sharing_service.py
ai_agent_widget/public/css/: widget.css
ai_agent_widget/public/js/: widget.js
integrations/frappe/: INSTALLATION.md  requirements.txt  setup.py
integrations/frappe/ai_agent_widget/: hooks.py
integrations/frappe/ai_agent_widget/public/css/: widget.css
integrations/frappe/ai_agent_widget/public/js/: widget.js
widget/: README.md  package.json
widget/src/: widget.css  widget.js
