[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ai_agent_widget"
version = "1.0.0"
description = "AI Agent Widget for ERPNext - Autonomous navigation and task execution"
authors = [
    {name = "Tecosys", email = "info@tecosys.in"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nutaan-erp>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/RudraxDynamics/rudraxone"
Repository = "https://github.com/RudraxDynamics/rudraxone"

[tool.flit.module]
name = "ai_agent_widget"
